Ajout bouton démo après déploiement réussi

--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
     "type": "git",
     "url": "https://github.com/lineuae/city-quiz-game.git"
   },
-  "homepage": "https://city-quiz-game-lamine.onrender.com"
+  "homepage": "https://city-quiz-game.onrender.com"
 }
